--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,7 @@ jobs:
           TARGET: IE11
     steps:
       - checkout
+      - run: echo 162.222.75.33 ondemand.saucelabs.com | sudo tee -a /etc/hosts
       - run: git submodule init
       - run: git submodule update --remote --force
       - run: cd wp-e2e-tests && git checkout origin/${E2E_BRANCH-master}
